--- a/_posts/2025-04-07-첫번째-나라의.md
+++ b/_posts/2025-04-07-첫번째-나라의.md
@@ -1,3 +1,5 @@
+md
+
 ---
 layout: post
 title: "TIL과 이런저런 이야기"
@@ -28,3 +30,4 @@ title: "TIL과 이런저런 이야기"
      결국 그렇게 외면한 현실로부터 오늘부터 강의가 시작이였다는 청천벽력의 소리를 듣고 부리나케 달려와 1주차 강의를 들으며 생각보다 내가 외면한 것들이 자동차 사이드미러처럼 가까이 존재할 수도 있다는 생각을 했다
      하지만 우리 팀원 분들은 모두 내향형, 그것도 극한의 IN들로 시작하는 기적의 어벤져스가 만들어졌다는 것에 생각보다 안심하며 생각보단 절망하고 있었다 (이게 호재인가 악재인가 나중에 잘되면 호재로 축배를 들고 나중에 안되면 함께해서 고마웠지만 다신 만나지 않는 것이 좋으리라)
      그러므로 오늘도 하나의 태양은 저물고 모기는 2마리를 죽이며 여전히 하루 3끼를 먹었으니 내일을 살아갈 용기를 얻으려한다. 미약하지만 두 손이 주머니를 더듬어 길을 찾아나서리라.
+     theme: minima
